# poetic.machines

./: .gitignore  README.md  environment.yaml  pyproject.toml  readme.md  requirements.txt
labs/: .gitignore
labs/01.intro-python/: README.md  animation.py  hello_world.py  lab-1.md  printing-datatypes.ipynb  readme.md
labs/02.actions-tools/: .gitignore  02.silencio.py  2.1.fonts.py  animation.py  basic_animation.py  canvas.ipynb  fonts.py  lab-2.md  readme.md  silencio.py  strings.ipynb  variables.ipynb
labs/03.repetition-loops/: repetitions-loops.ipynb
labs/03.repetition-loops-functions/: 3.1.snowball.py  3.2.silencio_loop.py  3.3.rythmes_silences.py  data-structures.tuples-lists.ipynb  functions.ipynb  lab-3.md  readme.md  repetitions-loops.ipynb  rythmes_silences.py  silencio_loop.py  snowball.py
labs/04.decision-control-flow/: .gitignore  01.questionable_orbit.py  02.silencio_linear_erasure.py  03.parameters_fullscreen.py  4.2.silencio_linear_erasure.py  4.3.parameters_fullscreen.py  4.3.rytmes_silences.py  decision-control-flow.ipynb  erasure-linear.py  functions-ii.ipynb  lab-4.md  parameters_fullscreen.py  questionable_orbit.py  readme.md  silencio.linear-erasure.py  silencio_linear_erasure.py
labs/05.data-files-randomness/: .gitignore  01.silencio_random_erasure.py  02.progressive_noise.py  04.image.py  05.video.py  5.3.grapefruit.py  5.4.image.py  5.5.video.py  README.md  combinatorics.ipynb  data-files.ipynb  data-structures.sets.ipynb  grapefruit.py  image.py  lab-5.md  progressive_noise.py  questionable_orbit.py  randomness.ipynb  readme.md  (+1 more)
(+78 files in other folders)
