[project]
name = "poetic-machines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "markdown>=3.8.2",
    "strip-markdown>=1.3",
    "matplotlib>=3.10.5",
    "py5canvas>=0.9",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "ollama>=0.5.3",
    "mediapipe>=0.10.14",
]
